# helicase-env

./: .gitignore  DELIVERY.md  README.md  pipeline.ipynb  pyproject.toml
cg/: #dna_fallback_m2_cg.itp.1#  #twinkle_cg.pdb.1#  #twinkle_cg.top.1#  #twinkle_m2.top.2#  #twinkle_m2_raw.pdb.1#  dna_30bp_sequence.fasta  solvated_inspection_system.json  twinkle_cg.top  twinkle_m2.top
cg/handoff_m2_ca_proxy/: README.md  dna_fallback_m2_cg.itp  manifest.json  system.top
cg/handoff_m2_mg_proxy/: README.md  dna_fallback_m2_cg.itp  manifest.json  mg_proxy.itp  system.top
docs/: journal.md  plan.md  visual_guide.md
docs/learning/: 01_big_picture.md  README.md  bio_01_dna_proteins_helicases.md  bio_02_twinkle_and_this_project.md  bio_03_structure_representation.md  code_01_repo_and_python_workflow.md  glossary.md  sim_01_molecular_simulation_basics.md  sim_02_coarse_graining_and_martini.md  sim_03_force_fields_topology_and_solvent.md  workflow_01_this_repo_end_to_end.md
notebooks/: visualize.ipynb
src/: 01_clean.py  02_build_dna.py  03_coarse_grain.py  04_merge.py  05_solvate.py  06_simulate.py  07_render_delivery_views.py  __init__.py  run_delivery.py
